Fixed default JVM args, fixed SLF4J warning message, initialized Chronicle core within `Main` init block